name:                htdp-image-example
version:             0.2.0.0

synopsis:            Example of htdp-image library

description:         The Tromino Tiling problem is commonly introduced to students learning
                     induction. An interesting fact about the problem is that its proof also
                     gives us a program for solving an instance of the tromino tiling problem.
                     This package demonstrate an example solution where the solution mimics the
                     logic behind the inductive proof for solving the problem, but without worrying
                     about the graphics side of the program at all!

license:             BSD3
license-file:        LICENSE
author:              Turab Jafri

-- patches.
maintainer:          trajafri@gmail.com

category:            Graphics
build-type:          Simple

extra-source-files:  CHANGELOG.md

cabal-version:       2.0

executable tromino-tile
  main-is:             Main.lhs
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13,
                       htdp-image >=1.0.0 && <2.0.0,
                       random ^>=1.0.0,
                       mtl    >=2.0.0,
                       optparse-applicative ^>=0.15.0
  hs-source-dirs:      src
  default-language:    Haskell2010

